macro(fuzz prog src libs)
    add_executable(${prog} ${src})
    target_include_directories(${prog} PUBLIC ../include ${FUZZER_INC})
    target_link_libraries(${prog} ${libs})
endmacro ()

fuzz(asn1 "asn1.c;driver.c;fuzz_rand.c" "ssl;crypto;${FUZZER_LIB}")
fuzz(asn1parse "asn1parse.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(bignum "bignum.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(bndiv "bndiv.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(client "client.c;driver.c;fuzz_rand.c" "ssl;crypto;${FUZZER_LIB}")
fuzz(conf "conf.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(crl "crl.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(pem "pem.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(decoder "decoder.c;driver.c;fuzz_rand.c" "crypto;${FUZZER_LIB}")
fuzz(punycode "punycode.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(smime "smime.c;driver.c" "ssl;crypto;${FUZZER_LIB}")
fuzz(v3name "v3name.c;driver.c" "crypto;${FUZZER_LIB}")
fuzz(server "server.c;driver.c;fuzz_rand.c" "ssl;crypto;${FUZZER_LIB}")

if (NOT OPENSSL_NO_OCSP)
    fuzz(x509 "x509.c;driver.c;fuzz_rand.c" "crypto;${FUZZER_LIB}")
endif ()
if (NOT OPENSSL_NO_CMP)
    fuzz(cmp "cmp.c;driver.c;fuzz_rand.c" "crypto;${FUZZER_LIB}")
endif ()
if (NOT OPENSSL_NO_CMS)
    fuzz(cms "cms.c;driver.c" "crypto;${FUZZER_LIB}")
endif ()
if (NOT OPENSSL_NO_CT)
    fuzz(ct "ct.c;driver.c" "crypto;${FUZZER_LIB}")
endif ()
if (NOT OPENSSL_NO_DTLS)
    fuzz(dtlsclient "dtlsclient.c;driver.c;fuzz_rand.c" "ssl;crypto;${FUZZER_LIB}")
    fuzz(dtlsserver "dtlsserver.c;driver.c;fuzz_rand.c" "ssl;crypto;${FUZZER_LIB}")
endif ()

if (NOT OPENSSL_NO_TESTS)
    fuzz(asn1-test "asn1.c;test-corpus.c;fuzz_rand.c" "ssl;crypto")
    fuzz(asn1parse-test "asn1parse.c;test-corpus.c" crypto)
    fuzz(bignum-test "bignum.c;test-corpus.c" crypto)
    fuzz(bndiv-test "bndiv.c;test-corpus.c" crypto)
    fuzz(client-test "client.c;test-corpus.c;fuzz_rand.c" "ssl;crypto")
    fuzz(conf-test "conf.c;test-corpus.c" crypto)
    fuzz(crl-test "crl.c;test-corpus.c" crypto)
    fuzz(pem-test "pem.c;test-corpus.c" crypto)
    fuzz(decoder-test "decoder.c;test-corpus.c;fuzz_rand.c" crypto)
    fuzz(punycode-test "punycode.c;test-corpus.c" crypto)
    fuzz(smime-test "smime.c;test-corpus.c" "ssl;crypto")
    fuzz(v3name-test "v3name.c;test-corpus.c" crypto)
    fuzz(server-test "server.c;test-corpus.c;fuzz_rand.c" "ssl;crypto")

    if (NOT OPENSSL_NO_OCSP)
        fuzz(x509-test "x509.c;test-corpus.c;fuzz_rand.c" crypto)
    endif ()
    if (NOT OPENSSL_NO_CMP)
        fuzz(cmp-test "cmp.c;test-corpus.c;fuzz_rand.c" crypto)
    endif ()
    if (NOT OPENSSL_NO_CMS)
        fuzz(cms-test "cms.c;test-corpus.c" crypto)
    endif ()
    if (NOT OPENSSL_NO_CT)
        fuzz(ct-test "ct.c;test-corpus.c" crypto)
    endif ()
    if (NOT OPENSSL_NO_DTLS)
        fuzz(dtlsclient-test
            "dtlsclient.c;test-corpus.c;fuzz_rand.c"
            "ssl;crypto")
        fuzz(dtlsserver-test
            "dtlsserver.c;test-corpus.c;fuzz_rand.c"
            "ssl;crypto")
    endif ()
endif ()
